# cserial

./: .gitignore  CMakeLists.txt  Makefile  README.md  serial_port.c  serial_port.h  version.rc.in
src/: CMakeLists.txt  cserial.c  cserial.h
test/: CMakeLists.txt  README.md  rx.c  test.cpp  tx.c
